<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintHorizontal_weight="1" />

        <ImageView
            android:id="@+id/imageView_title"
            android:layout_width="@dimen/movie_details_image_size"
            android:layout_height="@dimen/movie_details_image_size"
            android:scaleType="centerCrop"
            android:src="@drawable/mask"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_image_back_start_dimen"
            android:layout_marginTop="@dimen/movie_details_image_back_top_dimen"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_details_image_back_start_dimen"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_back" />


        <TextView
            android:id="@+id/textView_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_tv_age_start_dimen"
            android:layout_marginBottom="@dimen/movie_details_tv_age_bottom_dimen"
            android:padding="@dimen/movie_details_tv_age_padding"
            android:text="@string/age_card_description"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_title"
            app:layout_constraintStart_toStartOf="@+id/imageView_title" />

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="@dimen/movie_details_name_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_details_name_end_margin"
            android:text="@string/name_film_in_card"
            android:textSize="@dimen/movie_details_name_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/textView_age"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:id="@+id/textView_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            app:layout_constraintLeft_toLeftOf="@id/tv_title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_title_movie" />

        <ImageView
            android:id="@+id/imageView_star_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_first_star_start_dimen"
            android:src="@drawable/star_red"
            app:layout_constraintLeft_toLeftOf="@id/textView_genre"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <ImageView
            android:id="@+id/imageView_star_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_second_star_start_dimen"
            android:layout_marginTop="@dimen/movie_details_second_star_top_dimen"
            android:src="@drawable/star_red"
            app:layout_constraintStart_toEndOf="@+id/imageView_star_one"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <ImageView
            android:id="@+id/imageView_star_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_third_star_start_dimen"
            android:layout_marginTop="@dimen/movie_details_third_star_top_dimen"
            android:src="@drawable/star_red"
            app:layout_constraintStart_toEndOf="@+id/imageView_star_two"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <ImageView
            android:id="@+id/imageView_star_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_four_star_start_dimen"
            android:layout_marginTop="@dimen/movie_details_four_star_top_dimen"
            android:src="@drawable/star_red"
            app:layout_constraintStart_toEndOf="@+id/imageView_star_three"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <ImageView
            android:id="@+id/imageView_star_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_five_star_start_dimen"
            android:layout_marginTop="@dimen/movie_details_five_star_top_dimen"
            android:src="@drawable/star_gray"
            app:layout_constraintStart_toEndOf="@+id/imageView_star_four"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <TextView
            android:id="@+id/reviews_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_reviews_start_dimen"
            android:layout_marginTop="@dimen/movie_details_reviews_top_dimen"
            android:text="@string/how_many_reviews_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/imageView_star_five"
            app:layout_constraintTop_toBottomOf="@id/textView_genre" />

        <TextView
            android:id="@+id/textView_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movie_details_story_line_top_dimen"
            android:text="@string/story_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/imageView_star_one"
            app:layout_constraintTop_toBottomOf="@+id/imageView_star_one" />

        <TextView
            android:id="@+id/textView_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_story_start_dimen"
            android:layout_marginTop="@dimen/movie_details_story_top_dimen"
            android:layout_marginEnd="@dimen/movie_details_story_start_dimen"
            android:lineSpacingExtra="@dimen/movie_details_story_extra_dimen"
            android:text="@string/what_storyline"
            app:layout_constraintTop_toBottomOf="@+id/textView_storyline" />

        <TextView
            android:id="@+id/textView_cast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/movie_details_cast_title_start_dimen"
            android:layout_marginTop="@dimen/movie_details_cast_title_top_dimen"
            android:layout_marginEnd="@dimen/movie_details_cast_title_end_dimen"
            android:text="@string/cast_title"
            android:textSize="@dimen/movie_details_cast_title_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/textView_story"
            app:layout_constraintTop_toBottomOf="@+id/textView_story" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_details_cast_title_start_dimen"
            android:layout_marginTop="@dimen/movie_details_cast_top_dimen"
            android:layout_marginBottom="@dimen/movie_details_cast_title_bottom_dimen"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cast" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
