<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/film_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_margin="@dimen/margin_card_film">

    <ImageView
        android:id="@+id/image_view_mask"
        android:layout_width="@dimen/width_card_film"
        android:layout_height="@dimen/height_card_film"
        android:src="@drawable/mask_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/first_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_red"
        android:layout_marginStart="@dimen/first_star_start_dimen"
        android:layout_marginTop="@dimen/first_star_top_dimen"
        app:layout_constraintTop_toBottomOf="@id/genre_description"
        app:layout_constraintLeft_toLeftOf="@+id/image_view_mask"/>

    <ImageView
        android:id="@+id/second_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_red"
        android:layout_marginStart="@dimen/second_star_start_dimen"
        app:layout_constraintTop_toTopOf="@+id/first_star"
        app:layout_constraintLeft_toRightOf="@+id/first_star"/>

    <ImageView
        android:id="@+id/third_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_red"
        android:layout_marginStart="@dimen/third_star_start_dimen"
        app:layout_constraintTop_toTopOf="@+id/second_star"
        app:layout_constraintLeft_toRightOf="@+id/second_star"/>

    <ImageView
        android:id="@+id/four_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_red"
        android:layout_marginStart="@dimen/four_star_start_dimen"
        app:layout_constraintTop_toTopOf="@+id/third_star"
        app:layout_constraintLeft_toRightOf="@+id/third_star"/>
    <ImageView
        android:id="@+id/five_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_gray"
        android:layout_marginStart="@dimen/five_star_start_dimen"
        app:layout_constraintTop_toTopOf="@+id/four_star"
        app:layout_constraintLeft_toRightOf="@+id/four_star"/>

    <TextView
        android:id="@+id/how_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_many_reviews_label"
        android:textAllCaps="true"
        android:textSize="@dimen/reviews_text_size"
        android:textStyle="bold"
        android:textColor="@color/text_color_red"
        android:layout_marginStart="@dimen/reviews_start_dimen"
        android:layout_marginTop="@dimen/reviews_top_dimen"
        app:layout_constraintStart_toEndOf="@+id/five_star"
        app:layout_constraintTop_toBottomOf="@id/genre_description" />

    <TextView
        android:id="@+id/genre_description"
        android:layout_width="@dimen/genre_description_dimen"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/description_genre_start_dimen"
        android:layout_marginTop="@dimen/description_genre_top_dimen"
        android:text="@string/description_genre_card"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/genre_text_size"
        app:layout_constraintStart_toStartOf="@+id/image_view_mask"
        app:layout_constraintTop_toTopOf="@+id/image_view_mask" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_age_start_dimen"
        android:layout_marginTop="@dimen/tv_age_top_dimen"
        android:padding="@dimen/tv_age_padding"
        android:text="@string/age_card_description"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/tv_age_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/image_view_mask"
        app:layout_constraintTop_toTopOf="@+id/image_view_mask" />

    <ImageView
        android:id="@+id/is_card_liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:layout_marginTop="@dimen/is_liked_top_dimen"
        android:layout_marginEnd="@dimen/is_liked_end_dimen"
        android:layout_marginStart="@dimen/is_liked_start_dimen"
        app:layout_constraintStart_toEndOf="@+id/tv_age"
        app:layout_constraintTop_toTopOf="@+id/image_view_mask" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/movie_time_padding"
        android:text="@string/name_film_in_card"
        android:textSize="@dimen/size_of_movie_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_mask"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>